--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "notistack": "^1.0.9",
+    "prettier": "2.3.1"
   }
 }
