--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "firebase": "^8.6.7",
     "next": "10.2.3",
+    "nprogress": "^0.2.0",
+    "notistack": "^1.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "notistack": "^1.0.9",
     "prettier": "2.3.1"
   }
 }
