--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.4",
     "firebase": "^8.6.7",
     "next": "10.2.3",
-    "nprogress": "^0.2.0",
     "notistack": "^1.0.9",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^6.15.8",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "prettier": "2.3.1"
