--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "firebase": "^8.6.7",
     "next": "10.2.3",
     "notistack": "^1.0.9",
