--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "clsx": "^1.1.1",
     "firebase": "^8.6.7",
     "moment": "^2.29.1",
-    "next": "10.2.3",
+    "next": "^10.2.3",
     "notistack": "^1.0.9",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^6.15.8",
     "yup": "^0.32.8"
