--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "audit": "^0.0.6",
     "clsx": "^1.1.1",
     "firebase": "^8.6.7",
+    "fix": "^0.0.6",
     "moment": "^2.29.1",
-    "next": "^10.2.3",
+    "next": "^11.1.0",
     "notistack": "^1.0.9",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
