--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^1.3.8",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "audit": "^0.0.6",
@@ -16,12 +16,12 @@
     "firebase": "^8.10.1",
     "fix": "^0.0.6",
     "moment": "^2.29.3",
-    "next": "^11.1.4",
+    "next": "^12.1.5",
     "notistack": "^1.0.10",
     "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^6.15.8",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.29.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
